[package]
name = "openvpn-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["net", "fs", "rt", "io-util", "rt-multi-thread", "macros", "signal", "process", "sync", "time"]}
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
simple_logger = "5.0.0"
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
base64 = {version = "0.22.1", features = ["default", "alloc", "std"]}
serde_json = "1.0.128"
nix = { version = "0.29.0", features = ["process", "signal"] }
anyhow = "1.0.88"
clap = {version = "4.5.17", features = ["default", "derive"]}
rust-ini = "0.21.1"
chrono = {version = "0.4.38", features = ["default", "serde"]}